# django_eventspipe

./: .gitignore  LICENSE.txt  admin.py  pyproject.toml  urls.py  views.py
.github/workflows/: github-actions.yml
models/: artifact.py  pipeline_definition.py  task_definition.py
src/: apps.py  exceptions.py  utils.py
src/django_eventspipe/: admin.py  apps.py  decorators.py  schedulers.py  signals.py  tasks.py  utils.py  validators.py  views.py
src/django_eventspipe/migrations/: 0001_initial.py  0002_remove_artifact_name_remove_artifact_timestamp_and_more.py  0003_eventschedule.py  0004_eventschedule_enabled.py  0005_alter_eventschedule_event.py
src/django_eventspipe/models/: __init__.py  artifact.py  event_schedule.py  pipeline.py  pipeline_artifact.py  pipeline_definition.py  task.py  task_definition.py
src/models/: __init__.py  pipeline.py  pipeline_artifact.py  pipeline_definition_task_definition.py  task.py
