[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-eventspipe"
version = "0.1.0b3"
authors = [
  { name="Giuseppe Corti", email="giuseppe.corti@pm.me" },
]
description = "TODO"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0",
    "celery>=5.4"
]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/r3vn/django-eventspipe"
Issues = "https://github.com/r3vn/django-eventspipe/issues"

